--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "colors": "^1.1.2",
     "commander": "^2.10.0",
     "facebook-node-sdk": "^0.2.0"
+  },
+  "bin": {
+      "reactionator": "./reactionator.js"
   }
 }
